<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/neutral343434"
    tools:context=".ui.movie.detail.MovieDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/neutral545454"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/sv_movie_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/iv_poster"
                android:layout_width="300dp"
                android:layout_height="450dp"
                app:layout_constrainedHeight="true"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="ContentDescription"
                tools:src="@drawable/poster_alita"/>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                style="@style/header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_poster"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="@string/movie_title"/>

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                style="@style/subHeader"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                app:layout_constraintEnd_toStartOf="@id/tv_duration"
                tools:text="05/05/2025"/>

            <TextView
                android:id="@+id/tv_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                style="@style/subHeader"
                app:layout_constraintStart_toEndOf="@id/tv_date"
                app:layout_constraintTop_toTopOf="@id/tv_date"
                app:layout_constraintEnd_toStartOf="@id/tv_rating"
                tools:text="1h23m" />

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/subHeader"
                app:layout_constraintStart_toEndOf="@id/tv_duration"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_date"
                tools:text="PG-13"/>

            <TextView
                android:id="@+id/tv_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                style="@style/paragraph"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_date"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="Action, Family, Thriller"/>

            
            <TextView
                android:id="@+id/tv_user_score"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:textStyle="bold|italic"
                android:background="@drawable/bg_circle_ff8080"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_genre"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="100"/>
            
            <ImageView
                android:id="@+id/iv_thumbs"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_thumbs_up_down_white"
                app:layout_constraintStart_toStartOf="@id/tv_user_score"
                app:layout_constraintTop_toBottomOf="@id/tv_user_score"
                app:layout_constraintEnd_toEndOf="@id/tv_user_score"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="8dp"
                style="@style/paragraph"
                android:background="@drawable/bg_rounded_rectangle_54_4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_thumbs"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        style="?android:attr/progressBarStyle"
        android:indeterminateTint="@color/accentFF8080"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>