...
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/neutral545454"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/sv_tv_show_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
...
                style="@style/subHeader"
                android:text="@string/seasons"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_description" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_seasons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/tv_season" />

...
