<resources>
    <string name="app_name">Moofie</string>
    <string name="title">Title</string>
    <string name="sample_text">Sample Text</string>
    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_detail">Movie Detail</string>
    <string name="tv_show_detail">Tv Show Detail</string>
    <string name="episodes_colon">Episodes:</string>
    <string name="seasons">Seasons</string>
</resources>